--- a/code/node/cloudbuild.yaml
+++ b/code/node/cloudbuild.yaml
@@ -1,3 +1,6 @@
+options:
+  logging: CLOUD_LOGGING_ONLY  # 로그는 GCP Cloud Logging으로만 기록
+
 steps:
   # 1. docker-compose build
   - name: docker/compose:1.29.0
@@ -13,7 +16,7 @@ steps:
       - docker-compose.k8s.prod.yaml
       - push
 
-  # 3. kubectl로 이미지 업데이트 (롤링 업데이트 트리거)
+  # 3. kubectl set image (배포 갱신)
   - name: gcr.io/cloud-builders/kubectl
     args:
       - set
