--- a/code/node/cloudbuild.yaml
+++ b/code/node/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
   - name: docker/compose:1.29.0
     args:
       - -f
-      - docker-compose.k8s.prod.yaml
+      - code/node/docker-compose.k8s.prod.yaml
       - push
 
   # 3. 쿠버네티스에 이미지 적용
