--- a/code/cloudbuild.yaml
+++ b/code/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
   # 1. Docker 이미지 빌드
   - name: docker/compose:1.29.0
+    dir: .
     args:
       - -f
       - code/docker-compose.k8s.prod.yaml
@@ -8,6 +9,7 @@ steps:
 
   # 2. 이미지 푸시
   - name: docker/compose:1.29.0
+    dir: .
     args:
       - -f
       - code/docker-compose.k8s.prod.yaml
