--- a/code/cloudbuild.yaml
+++ b/code/cloudbuild.yaml
@@ -1,22 +1,22 @@
 steps:
   # 1. Docker 이미지 빌드
   - name: gcr.io/cloud-builders/docker
-    dir: ../..  # → build context = 25-1-Capstone/
+    dir: ../    # <- build context를 루트 (25-1-Capstone/)로 설정
     args:
       - build
       - -t
       - asia.gcr.io/steel-fin-459711-k9/capstone-server:$SHORT_SHA
       - -f
-      - code/node/Dockerfile
-      - .
+      - code/node/Dockerfile  # 이 Dockerfile은 build context 내 경로 기준
+      - .                     # context root (25-1-Capstone)
 
-  # 2. 이미지 푸시
+  # 2. Docker 이미지 푸시
   - name: gcr.io/cloud-builders/docker
     args:
       - push
       - asia.gcr.io/steel-fin-459711-k9/capstone-server:$SHORT_SHA
 
-  # 3. 쿠버네티스 워크로드에 이미지 반영
+  # 3. 쿠버네티스에 이미지 반영
   - name: gcr.io/cloud-builders/kubectl
     args:
       - set
