--- a/code/node/Dockerfile
+++ b/code/node/Dockerfile
@@ -1,7 +1,7 @@
 # 1단계: React 앱 빌드
 FROM node:18 AS builder
 WORKDIR /app/web
-COPY code/web ./           # context 기준 경로
+COPY web ./              # code/web 폴더 복사
 RUN npm install
 RUN npm run build
 
@@ -9,15 +9,12 @@ RUN npm run build
 FROM node:18
 WORKDIR /app
 
-# 백엔드 패키지 설치
-COPY code/node/package*.json ./    
+COPY node/package*.json ./
 RUN npm install
 RUN npm install mysql
 
-# 백엔드 코드 복사
-COPY code/node/ .                 
+COPY node/ .            # code/node 폴더 복사
 
-# 프론트 빌드 결과 복사
 COPY --from=builder /app/web/build ./web/build
 
 EXPOSE 3000
