--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,7 +16,7 @@ steps:
       - set
       - image
       - deployment/capstone-express
-      - capstone-server=asia.gcr.io/steel-fin-459711-k9/capstone-server:$SHORT_SHA
+      - capstone-server-sha256-1=asia.gcr.io/steel-fin-459711-k9/capstone-server:$SHORT_SHA
     env:
       - CLOUDSDK_COMPUTE_REGION=asia-northeast3
       - CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1
