--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -47,8 +47,8 @@ steps:
     args:
       - set
       - image
-      - deployment/capstone-flask
-      - capstone-flask-sha256-1=asia.gcr.io/steel-fin-459711-k9/capstone-flask:$SHORT_SHA
+      - deployment/capstone-ai
+      - flask-ai-server-sha256-1=asia.gcr.io/steel-fin-459711-k9/capstone-flask:$SHORT_SHA
     env:
       - CLOUDSDK_COMPUTE_REGION=asia-northeast3
       - CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1
