--- a/code/.env
+++ b/code/.env
@@ -1,8 +1,9 @@
 # DB configuration
-DB_HOST=localhost
+DB_HOST=my-database.suhyeon.xyz
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=root
-DB_NAME=capstone2
+DB_PASSWORD=1234
+DB_NAME=capstone
 
 # node.js configuration
 PORT=8000
