docker-compose 수정정

--- a/code/docker-compose.k8s.prod.yaml
+++ b/code/docker-compose.k8s.prod.yaml
@@ -5,3 +5,5 @@ services:
       context: ./
       dockerfile: node/Dockerfile
     image: asia.gcr.io/steel-fin-459711-k9/capstone-server:0.1
+    env_file:
+      - .env
