파일 환경변수 수정

--- a/code/.env
+++ b/code/.env
@@ -10,3 +10,5 @@ PORT=8000
 
 # flask configuration
 FLASK_API_URL=http://capstone-ai-service:5000/api/flask-endpoint
+
+REACT_APP_API_URL=http://localhost:8000
