db 마이그레이션 추가

--- a/code/.env
+++ b/code/.env
@@ -17,3 +17,4 @@ REACT_APP_API_URL=http://localhost:8000
 # Google Cloud Storage configuration
 GOOGLE_CLOUD_STORAGE_BUCKET=capstone_pothole_bucket
 GOOGLE_CLOUD_PROJECT_ID=steel-fin-459711-k9
+GOOGLE_APPLICATION_CREDENTIALS=../secure/steel-fin-459711-k9-01424cceaf04.json
