--- a/code/node/package.json
+++ b/code/node/package.json
@@ -4,6 +4,7 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "iconv-lite": "^0.6.3",
     "multer": "^2.0.0",
     "multer-google-storage": "^1.3.0",
     "mysql": "^2.18.1",
