--- a/code/.env
+++ b/code/.env
@@ -18,3 +18,5 @@ REACT_APP_API_URL=http://localhost:8000
 GOOGLE_CLOUD_STORAGE_BUCKET=capstone_pothole_bucket
 GOOGLE_CLOUD_PROJECT_ID=steel-fin-459711-k9
 GOOGLE_APPLICATION_CREDENTIALS=../secure/steel-fin-459711-k9-01424cceaf04.json
+
+KAKAO_API_KEY=1e1e4cdde8201f18aacae19257f3fffa
