--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,37 +1,20 @@
 steps:
   #############################################
-  # 0. Base64 인코딩된 GCP 서비스 계정 키 만들기 (SecretManager에서 불러와서 인코딩)
-  #############################################
-  - name: 'ubuntu'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        echo -n "$GCP_SA_KEY" | base64 -w 0 > key.base64
-
-  #############################################
-  # 1. 기존 Secret 삭제 (있으면 삭제)
-  #############################################
-  - name: 'gcr.io/cloud-builders/kubectl'
-    args:
-      - delete
-      - secret
-      - capstone-secrets
-      - --ignore-not-found
-    env:
-      - CLOUDSDK_COMPUTE_REGION=asia-northeast3
-      - CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1
-
-  #############################################
-  # 2. Secret 새로 생성 (Base64 인코딩된 서비스계정키 포함 4가지)
+  # 1. GCP 서비스 계정 키 Secret 생성
   #############################################
   - name: 'gcr.io/cloud-builders/kubectl'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
+        echo "🔐 Creating Kubernetes Secret for GCP key..."
+
+        # 기존 secret 삭제
+        kubectl delete secret capstone-secrets --ignore-not-found
+
+        # Secret 생성
         kubectl create secret generic capstone-secrets \
-          --from-literal=GCP_SA_KEY_BASE64="$(cat key.base64)" \
+          --from-literal=GCP_SA_KEY_BASE64="${GCP_SA_KEY}" \
           --from-literal=GOOGLE_CLOUD_STORAGE_BUCKET="steel-fin-459711-k9-01424cceaf04" \
           --from-literal=GOOGLE_CLOUD_PROJECT_ID="steel-fin-459711-k9" \
           --from-literal=KAKAO_API_KEY="1e1e4cdde8201f18aacae19257f3fffa"
@@ -40,7 +23,7 @@ steps:
       - CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1
 
   #############################################
-  # 3. Express (Node.js 서버) 빌드 및 배포
+  # 2. Express (Node.js 서버) 빌드 및 배포
   #############################################
   - name: gcr.io/cloud-builders/docker
     args:
@@ -67,7 +50,7 @@ steps:
       - CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1
 
   #############################################
-  # 4. Flask (Python AI 서버) 빌드 및 배포
+  # 3. Flask (Python AI 서버) 빌드 및 배포
   #############################################
   - name: gcr.io/cloud-builders/docker
     args:
