--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -76,3 +76,5 @@ steps:
     env:
       - CLOUDSDK_COMPUTE_REGION=asia-northeast3
       - CLOUDSDK_CONTAINER_CLUSTER=
+options:
+  logging: CLOUD_LOGGING_ONLY
