--- a/code/node/Dockerfile
+++ b/code/node/Dockerfile
@@ -24,7 +24,7 @@ RUN npm install iconv-lite
 RUN npm install cors
 RUN npm install dotenv
 RUN npm install multer
-RUN npm install multer-cloud-storage
+RUN npm install @google-cloud/storage
 
 # 백엔드 코드 복사
 COPY code/node/ .    
